--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.5.1",
-    "urban": "^0.3.2"
+    "node-opus": "^0.3.3",
+    "urban": "^0.3.2",
+    "yt-search": "^1.1.2",
+    "ytdl-core": "^2.1.0"
   }
 }
