--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "discord.js": "^11.5.1",
     "node-opus": "^0.3.3",
+    "opusscript": "0.0.7",
     "urban": "^0.3.2",
     "yt-search": "^1.1.2",
     "ytdl-core": "^2.1.0"
